// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Progress Progress base demo works fine 1`] = `
<base>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="80"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="80"
      theme="plump"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="30"
      theme="circle"
    />
  </wx-view>
</base>
`;

exports[`Progress Progress circle demo works fine 1`] = `
<circle>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="80"
      theme="circle"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="warning"
      theme="circle"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="error"
      theme="circle"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="success"
      theme="circle"
    />
  </wx-view>
</circle>
`;

exports[`Progress Progress custom demo works fine 1`] = `
<custom>
  <wx-view
    class="progress-example"
  >
    <t-progress
      color="#CD04FF"
      percentage="88"
      tClassLabel="external-class-label"
      trackColor="#EAC9FF"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      tClassBar="external-class-bar"
    />
  </wx-view>
</custom>
`;

exports[`Progress Progress line demo works fine 1`] = `
<line>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="80"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="warning"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="error"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="success"
    />
  </wx-view>
</line>
`;

exports[`Progress Progress plump demo works fine 1`] = `
<plump>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="80"
      theme="plump"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="warning"
      theme="plump"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="error"
      theme="plump"
    />
  </wx-view>
  <wx-view
    class="progress-example"
  >
    <t-progress
      percentage="88"
      status="success"
      theme="plump"
    />
  </wx-view>
</plump>
`;

exports[`Progress Progress transition demo works fine 1`] = `
<transition>
  <wx-view
    class="progress-example"
  >
    <t-progress
      ariaRole="region"
      percentage="{{88}}"
    />
    <wx-view
      class="button-group"
    >
      <t-button
        size="small"
        theme="primary"
        variant="plain"
        bind:tap="clickReduce"
      >
        减少
      </t-button>
      <wx-view
        class="space"
      />
      <t-button
        size="small"
        theme="primary"
        bind:tap="clickAdd"
      >
        增加
      </t-button>
    </wx-view>
  </wx-view>
</transition>
`;
